client/components/domains/domain-suggestion/style.scss
@import "@wordpress/base-styles/breakpoints";
@import "@wordpress/base-styles/mixins";

.domain-suggestion {
	flex-direction: column;

	@include break-mobile {
		flex-direction: row;
		align-items: center;
	}

	.domain-suggestion__content-domain {
		justify-content: space-between;
	}

	&.is-clickable {
		cursor: pointer;

		// NOTE: easeOutExpo easing function from http://easings.net/#easeOutExpo
		transition: box-shadow 0.25s cubic-bezier(0.19, 1, 0.22, 1);

		&:hover {
			box-shadow: 0 0 0 1px var(--color-neutral-light);
			z-index: z-index("root", ".domain-suggestion.is-clickable:hover");
		}
	}

	.domain-registration-suggestion__domain-title {
		font-size: $font-body;

		.domain-registration-suggestion__domain-title-name {
			color: var(--studio-gray-60);
		}

		.domain-registration-suggestion__domain-title-tld {
			font-weight: 500;
			color: var(--studio-gray-90);
		}
	}

	.badge {
		margin-left: 0;
		border-radius: 4px;
		font-size: 0.75rem;
		font-weight: 500;
		margin-right: 4px;

		&.badge--warning {
			background-color: var(--color-warning-10);
		}
	}
}

.domain-suggestion:not(.featured-domain-suggestion) {
	display: flex;
	flex-direction: column;

	@include break-mobile {
		flex-direction: row;
		align-items: center;
		padding: 15px 20px;
	}

	.is-section-signup & {
		@include breakpoint-deprecated( ">480px" ) {
			flex-direction: row;
			align-items: center;
		}
	}

	.is-section-domains & {
		@include breakpoint-deprecated( ">800px" ) {
			flex-direction: row;
			align-items: center;
		}
	}

	&.is-added {
		background-color: var(--color-neutral-0);

		.domain-suggestion__content {
			h3,
			.domain-product-price {
				color: var(--color-neutral);
			}
		}
	}

	&.is-unavailable {
		cursor: default;

		.domain-suggestion__content {
			h3,
			.domain-product-price {
				color: var(--color-neutral);
			}
		}
	}
}

.domain-suggestion__content {
	width: 100%;
	min-height: 32px;

	@include breakpoint-deprecated( ">660px" ) {
		display: flex;
		justify-content: space-between;
	}

	.notice.is-compact {
		margin: 0 0 0 8px;
		color: var(--color-text-inverted);

		&.is-success {
			background: var(--color-success);
		}

		&.is-info {
			background: var(--color-primary);
		}

		&.is-warning {
			background: var(--color-warning);
		}

		.notice__content {
			padding: 4px 8px;
		}
	}

	.notice__icon-wrapper {
		display: none;
	}

	.is-placeholder & {
		animation: loading-fade 1.6s ease-in-out infinite;
		background-color: var(--color-neutral-0);
		color: transparent;
		min-height: 44px;
	}

	@include breakpoint-deprecated( ">660px" ) {
		.is-placeholder & {
			margin-right: 50%;
			min-height: 22px;
		}

		.is-placeholder:nth-of-type(2n + 1) & {
			margin-right: 52%;
		}

		.is-placeholder:nth-of-type(1) & {
			margin-right: 40%;
		}
	}

	> h3 {
		word-break: break-all;

		@include breakpoint-deprecated( ">660px" ) {
			flex-grow: 2;
		}
	}

	> div {
		.is-placeholder & {
			color: transparent;
		}
	}
}

.domain-registration-suggestion__title-wrapper {
	display: flex;
	flex-direction: column-reverse;
	flex-wrap: nowrap;

	@include break-mobile {
		flex-direction: row;
	}

	&.domain-registration-suggestion__title-domain {
		@include breakpoint-deprecated( ">480px" ) {
			max-width: 50%;
			min-width: 50%;
			margin-right: 1em;
		}

		@include breakpoint-deprecated( ">800px" ) {
			max-width: 55%;
			min-width: 55%;
			margin-right: 1em;
		}
	}

	.domain-registration-suggestion__title {
		width: auto;
		max-width: 100%;
		padding-right: 0.2em;
		display: flex;
	}

	.badge {
		align-self: center;
	}

	.domain-registration-suggestion__hsts-tooltip {
		display: flex;
		align-items: center;
		justify-content: center;
		margin-left: 4px;
	}

	body.is-section-signup .layout:not(.dops) & {
		.domain-registration-suggestion__hsts-tooltip {
			padding: 0;
		}
	}
}

.domain-registration-suggestion__title {
	font-size: $font-body;
	word-break: break-all;

	@include breakpoint-deprecated( ">480px" ) {
		align-self: center;
		padding-right: 2em;
	}
}

.domain-suggestion__price-container,
.domain-suggestion__action-container {
	flex: 0 0 auto;
	width: 100%;

	@include break-mobile {
		width: auto;
	}
}

.domain-suggestion__price-container {
	padding-right: 1em;
	margin-top: 10px;
	@include break-mobile {
		margin-top: 0;
	}
}

.button.domain-suggestion__action {
	width: 100%;
	height: 40px;
	min-width: 66px;
	text-align: center;
	margin-top: 16px;
	padding: 0.25em 3em;
	transition: all 0.1s linear;

	@include break-mobile {
		width: auto;
		flex: 1 0 auto;
		margin-left: 1em;
		margin-top: 0;
	}

	.is-placeholder & {
		animation: loading-fade 1.6s ease-in-out infinite;
		background-color: var(--color-neutral-0);
		border: none;
		border-radius: 0;
		color: transparent;
		margin-left: 40px;
		min-height: 26px;
	}

	&.is-borderless {
		color: var(--color-primary);
		margin-top: 0;
		padding: 0;
	}
}

.domain-suggestion__chevron {
	display: none;
	margin-left: 10px;
	flex: 1 0 auto;
	color: var(--color-neutral-light);

	.is-placeholder & {
		animation: loading-fade 1.6s ease-in-out infinite;
		color: var(--color-neutral-0);
	}

	.is-section-signup & {
		@include breakpoint-deprecated( ">480px" ) {
			display: block;
		}
	}

	.is-section-domains & {
		@include breakpoint-deprecated( ">800px" ) {
			display: block;
		}
	}
}

.domain-registration-suggestion__badges {
	margin: 0 0 10px;
	display: flex;
	align-items: center;

	@include break-mobile {
		margin: 0 0 0 4px;
		align-self: center;
	}
}

body.is-section-signup.is-white-signup {
	svg {
		padding-top: 0;
		margin-right: 0;
	}

	.domain-registration-suggestion__badges {
		margin-left: 0;
		margin-top: 0;
		margin-bottom: 10px;

		.badge {
			border-radius: 4px;
			font-size: 0.75rem;
			font-weight: 500;
			white-space: nowrap;
		}

		@include break-wide {
			align-self: baseline;
			margin-left: 12px;
			margin-bottom: 0;
			flex: 1;
		}
	}

	.featured-domain-suggestion--is-placeholder .domain-registration-suggestion__badges {
		margin-left: 0;
	}

	.domain-suggestion {
		flex-direction: column;
		box-shadow: none;

		@include break-mobile {
			margin: 0 20px;
			flex-direction: row;
		}

		@include break-large {
			margin: 0;
		}

		button.info-popover {
			padding: 0;
		}

		& .domain-suggestion__content-domain {
			justify-content: space-between;
			margin-right: 40px;
		}

		.domain-product-price__free-text {
			color: var(--color-neutral-60);
			font-size: $font-body;
		}

		.domain-product-price__price {
			font-size: $font-body-small;
			font-weight: initial;

			&:not(.domain-product-price__free-price) {
				color: var(--color-neutral-40);
			}
		}

		&.is-clickable:hover {
			@include break-mobile {
				border-top: 1px solid #646970;
				border-bottom: 1px solid #646970;
			}
		}

		.domain-registration-suggestion__title {
			font-size: 0.875rem;

			@include break-mobile {
				font-size: 1rem;
				align-self: baseline;
			}
		}
		&.is-placeholder.card .domain-suggestion__action {
			display: none;
		}

		& .domain-registration-suggestion__domain-title {
			color: var(--studio-gray-90);
		}

		& .domain-product-price__free-price {
			font-size: $font-body-small;
			font-weight: initial;
			color: var(--studio-green-60);
			line-height: 20px;
			letter-spacing: 0.2px;

			@include break-mobile {
				font-weight: 500;
			}
		}

		&:not(.featured-domain-suggestion) {
			background: none;
			border-bottom: 1px solid rgba(220, 220, 222, 0.64);
			border-top: 1px solid #fff; //This white border is to prevent jumpiness while showing borders on hover
			padding: 16px 20px;

			@include break-mobile {
				padding: 16px 5px;
			}

			.domain-registration-suggestion__domain-title {
				.domain-registration-suggestion__domain-title-name {
					color: var(--studio-gray-60);
				}

				.domain-registration-suggestion__domain-title-tld {
					font-weight: 500;
				}
			}

			.domain-product-price__free-text {
				font-size: $font-body;

				@include break-mobile {
					font-size: $font-body-small;
				}
			}

			.domain-product-price__price:not(.domain-product-price__free-price) {
				font-size: $font-body-small;
			}

			.domain-suggestion__action.is-borderless {
				color: var(--color-text);
				padding: 0.57em 1.17em;
				@include break-mobile {
					width: auto;
				}

				.gridicons-checkmark {
					color: var(--studio-green-60);
				}
			}
			.domain-suggestion__action:not(.is-borderless) {
				width: 100%;
				height: auto;
				line-height: 20px;
				padding: 0.57em 1.17em;
				font-weight: 500;
				border-radius: 4px;
				box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
				border: 1px solid #c3c4c7;
				letter-spacing: 0.32px;
				font-size: 0.875rem;

				@include break-mobile {
					padding: 0.65em 2.8em;
					width: auto;
				}

				&:focus {
					border-color: var(--color-primary);
					box-shadow: 0 0 0 2px var(--color-primary-light);
				}
			}

			&.domain-transfer-suggestion {
				$cod-grey: #2b2d2f;

				.domain-suggestion__action {
					color: $cod-grey;
					text-decoration-line: underline;
				}
				.domain-suggestion__chevron {
					fill: $cod-grey;
					margin-left: 0;
				}
			}

			&.domain-skip-suggestion {
				$cod-grey: #2b2d2f;

				.domain-suggestion__action {
					height: auto;
					color: $cod-grey;
					text-decoration-line: underline;
				}
				.domain-suggestion__chevron {
					fill: $cod-grey;
					margin-left: 0;
				}
			}
		}
	}
}

.domain-suggestion__price-placeholder {
	animation: loading-fade 1.6s ease-in-out infinite;
	background-color: var(--color-neutral-0);
	color: transparent;
	height: 16px;
	margin: auto 0;
	width: 20%;
}

